<resources>
    <string name="app_name">Calculadora</string>
    <string name="bnt_C">C</string>
    <string name="bnt_Borrar">&lt;--</string>
    <string name="bnt_Dividir">/</string>
    <string name="bnt_Multiplicar">X</string>
    <string name="bnt_Resta">-</string>
    <string name="bnt_Suma">+</string>
    <string name="bnt_Igual">=</string>
    <string name="bnt_1">1</string>
    <string name="bnt_2">2</string>
    <string name="bnt_3">3</string>
    <string name="bnt_4">4</string>
    <string name="bnt_5">5</string>
    <string name="bnt_6">6</string>
    <string name="bnt_7">7</string>
    <string name="bnt_8">8</string>
    <string name="bnt_9">9</string>
    <string name="bnt_0">0</string>
    <string name="bnt_Coma">,</string>
</resources>