<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@color/colorBlack"
    android:gravity="bottom"
    tools:context=".MainActivity">

    <!-- TextView de los numeros -->
    <TextView
        android:id="@+id/tv_numero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:height="180dp"
        android:gravity="bottom"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <!-- GridLayout donde estarán los botones -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_numero"
        android:columnCount="4"
        android:rowCount="5">

        <!-- Botones -->
        <Button
            android:id="@+id/BtnC"
            style="@style/AppTheme.Botones.Grey1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_gravity="fill_horizontal"
            android:text="@string/bnt_C" />

        <Button
            android:id="@+id/BtnDividir"
            style="@style/AppTheme.Botones.Orange"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/bnt_Dividir" />

        <Button
            android:id="@+id/Btn7"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/bnt_7" />

        <Button
            android:id="@+id/Btn8"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/bnt_8" />

        <Button
            android:id="@+id/Btn9"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/bnt_9" />

        <Button
            android:id="@+id/BtnMultiplicar"
            style="@style/AppTheme.Botones.Orange"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/bnt_Multiplicar" />

        <Button
            android:id="@+id/Btn4"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/bnt_4" />

        <Button
            android:id="@+id/Btn5"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/bnt_5" />

        <Button
            android:id="@+id/Btn6"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/bnt_6" />

        <Button
            android:id="@+id/Btn_Resta"
            style="@style/AppTheme.Botones.Orange"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/bnt_Resta" />

        <Button
            android:id="@+id/Btn1"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/bnt_1" />

        <Button
            android:id="@+id/Btn2"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/bnt_2" />

        <Button
            android:id="@+id/Btn3"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/bnt_3" />

        <Button
            android:id="@+id/BtnSuma"
            style="@style/AppTheme.Botones.Orange"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/bnt_Suma" />

        <Button
            android:id="@+id/Btn0"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/bnt_0" />

        <Button
            android:id="@+id/BtnComa"
            style="@style/AppTheme.Botones.Grey2"
            android:layout_row="4"
            android:layout_column="2"
            android:text="@string/bnt_Coma" />

        <Button
            android:id="@+id/BtnIgual"
            style="@style/AppTheme.Botones.Orange"
            android:layout_row="4"
            android:layout_column="3"
            android:text="@string/bnt_Igual" />
    </GridLayout>

</RelativeLayout>